fixed header bug (box-sizing-border)
this was causing extra padding on every page

--- a/src/app/home/ProductDisplayLayoutHeader.module.css
+++ b/src/app/home/ProductDisplayLayoutHeader.module.css
@@ -27,3 +27,8 @@
     text-decoration: none;
 }
 
+@media (max-width: 700px) {
+    .container{
+        margin-bottom: 8%;
+    }
+}
